--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,30 @@
-title:            Site Title
-description:      Describe your website here.
+title:            Dependency Hell
+description:      "The future is here, It's just not evenly distributed yet"
 disqus_shortname: 
 #Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://localhost:4000
+url:              yanmingchen.com
 
 # Owner/author information
 owner:
-  name:           Your Name
-  avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
+  name:           Ian <br> Yanming Chen 
+  avatar:         theme_avatar.jpg
+  bio:  |
+                  a Realistic Optimist <br>
+                  a Persistent Dreamer <br>
+                  a Idea Realizer <br>   
+                  a Program Weaver <br>
+  email:          phoenix.cym@gmail.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
-  facebook:       
-  github:         
+  facebook:       https://www.facebook.com/ian.y.chen.54
+  github:         https://github.com/lucaschenex
   stackexchange:  
-  linkedin:       
+  linkedin:       www.linkedin.com/pub/yanming-chen/69/914/135/
   instagram:      
   flickr:         
   tumblr:         
   # For Google Authorship https://plus.google.com/authorship
-  google_plus:   
+  google_plus:   google.com/+IanChen1024
 
 # Background image to be tiled on all pages
 background: ps_neutral.png
@@ -34,14 +38,15 @@ bing_verify:
 # Links to include in top navigation
 # For external links add external: true
 links:
-  - title: Theme Setup
-    url: /theme-setup
-  - title: External Link
-    url: http://mademistakes.com
+  - title: Resume
+    url: /about
+  - title: GitHub Page
+    url: https://github.com/lucaschenex
     external: true
 
+
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    America/Los_Angeles
 future:      true
 pygments:    true
 markdown:    kramdown
